update integrtion status page with header and fix styling (card overflow)

--- a/app/styles/buttons.css
+++ b/app/styles/buttons.css
@@ -1,6 +1,6 @@
 .btn {
   /* @apply text-primary-foreground ring-offset-background focus-visible:ring-ring focus-visible:ring-offset-2 */
-  @apply border-sky-500 border-b-4 active:border-b-0 inline-flex items-center justify-center whitespace-nowrap rounded-xl text-sm font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 uppercase tracking-wide h-11 px-4 py-2;
+  @apply border-b-4 active:border-b-0 inline-flex items-center justify-center whitespace-nowrap rounded-xl text-sm font-bold transition-colors focus-visible:outline-none focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 uppercase tracking-wide h-11 px-4 py-2;
   @extend btn-blue;
 }
 .btn-blue{
